--- a/css/app.css
+++ b/css/app.css
@@ -73,6 +73,8 @@ input#create_task{
     font-size: 3vw;
     font-family: futura;
     padding: 10px;
+    width: -webkit-fill-available;
+    width: -moz-fill-available;
 }
 section#create_screen{
     width: 80%;
